Preserve white-on-black logo/top bar in some cases, and fix spacing before first divider

--- a/app/assets/stylesheets/whitespace.less
+++ b/app/assets/stylesheets/whitespace.less
@@ -118,3 +118,8 @@ So for example:
   .generate-two-sided(mobile-);
   .generate-one-sided(mobile-);
 }
+
+/* Special utility for main nav */
+.mlneg-divider {
+  margin-left: -15px;
+}
